# nanoserve

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  loom_script.md  portfolio_card.md  reading_notes.md
nanoserve/: __init__.py  cli.py  metrics.py  report.py  server.py
nanoserve/backends/: __init__.py  base.py  mlx_backend.py
nanoserve/engine/: __init__.py  kv_cache.py  scheduler.py
prompts/: README.md  bench.json  cache.json
results/published/: baseline_benchmark.json  batch_benchmark.json  benchmark.json  cache_benchmark.json  sysinfo.json
tests/: test_kv_cache.py  test_metrics.py  test_scheduler.py  test_server.py
